--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-Flask==2.0.2
-Flask-SQLAlchemy==2.5.1
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
 Flask-Migrate==3.1.0
-Flask-Login==0.5.0
-gunicorn==20.1.0
-requests==2.26.0
-pandas==2.2.2
+Flask-Login==0.6.3
+# gunicorn==20.1.0
+requests==2.28.0
+# pandas==2.2.2
+
+#latest versions for the above packages
