--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ Flask-Migrate==3.1.0
 Flask-Login==0.6.3
 # gunicorn==20.1.0
 requests==2.28.0
+openai==1.23.6
+Flask-WTF==1.2.1
+email-validator==2.1.1
 # pandas==2.2.2
 
 #latest versions for the above packages
