Add security templates and documentation
- Add keys.env.template and deployment.json.template
- Add SECURITY.md with setup instructions
- Update .gitignore with better organization
- These templates help prevent accidental secret commits

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,7 @@ openai_test.py
 **/__pycache__/
 *.pyc
 *.pyo
+
+# Sensitive files - use .template files and copy to actual files
 keys.env
 deployment.json
