--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,40 @@
-name: Deploy to Azure App Service without ZIP
+name: Deploy Flask App to Azure App Service (No Oryx)
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Login to Azure
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Zip application
+      run: |
+        zip -r app.zip .
+
+    - name: Azure Login
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Zip app contents
-      run: |
-        zip -r app.zip .
-
-    - name: Deploy zip package to Azure App Service
+    - name: Deploy to Azure Web App
       run: |
         az webapp deploy \
-          --name FetusApp-Dev \
           --resource-group fetusapp-development \
+          --name FetusApp-Dev \
           --src-path app.zip \
           --type zip
