migrate pregnencies data

--- a/migration_scripts/column_mapping.json
+++ b/migration_scripts/column_mapping.json
@@ -103,6 +103,68 @@
     {"source": "LastUpdated", "target": "last_updated_on", "type": "datetime"},
     {"source": "LastUpdatedBy", "target": "last_updated_by", "type": "int", "default": 1},
     {"source": "IsActive", "target": "is_active", "type": "bool"}
+  ],
+  "tblpregnancyhistory": [
+    {"source": "PregnancyID", "target": "id", "type": "int"},
+    {"source": "s_org_extID", "target": "patient_id", "type": "int"},
+    {"source": "TER", "target": "ter", "type": "date"},
+    {"source": "Alcohol", "target": "alcohol", "type": "str"},
+    {"source": "Smoking", "target": "smoking", "type": "str"},
+    {"source": "Amniocentesis", "target": "amniocentesis", "type": "str"},
+    {"source": "Medication", "target": "medication", "type": "str"},
+    {"source": "Other", "target": "other", "type": "str"},
+    {"source": "Diabetes", "target": "diabetes", "type": "str"},
+    {"source": "Ypertasi", "target": "hypertension", "type": "str"},
+    {"source": "UrineAlbumin", "target": "urine_albumin", "type": "str"},
+    {"source": "Bleeding", "target": "bleeding", "type": "str"},
+    {"source": "BloodType", "target": "blood_type", "type": "str"},
+    {"source": "Rhesus", "target": "rhesus", "type": "str"},
+    {"source": "HemoglobinopathiesBTH", "target": "hemoglobinopathies_bth", "type": "str"},
+    {"source": "HemoglobinopathiesBS", "target": 	"hemoglobinopathies_bs",	"type":"str"},
+    {"source": "VaginalFluidCultivation","target":"vaginal_fluid_cultivation","type":"str"},
+    {"source": "MycoplasmaUreaplasma","target":"mycoplasma_ureaplasma","type":"str"},
+    {"source": "Chlamydia","target":"chlamydia","type":"str"},
+    {"source": "HerpesHSV","target":"herpes_hsv","type":"str"},
+    {"source": "HIV12","target":"hiv_12","type":"str"},
+    {"source": "SyphilisVDLR","target":"syphilis_vdlr","type":"str"},
+    {"source": "HepatitisBBHsAg","target":"hepatitis_b_bhsag","type":"str"},
+    {"source": "AIDSHIV","target":"aids_hiv","type":"str"},
+    {"source": "RedCells","target":"red_cells","type":"str"},
+    {"source": "Toxoplasma","target":"toxoplasma","type":"str"},
+    {"source": "CytomegalovirusCMV","target":"cytomegalovirus_cmv","type":"str"},
+    {"source": "Listeria","target":"listeria","type":"str"},
+    {"source": "HCV","target":"hcv","type":"str"},
+    {"source": "Created", "target": "created_on", "type": "datetime"},
+    {"source": "CreatedBy", "target": "created_by", "type": "int", "default": 1},
+    {"source": "LastUpdated", "target": "last_updated_on", "type": "datetime"},
+    {"source": "LastUpdatedBy", "target": "last_updated_by", "type": "int", "default": 1},
+    {"source": "IsActive", "target": "is_active", "type": "bool"}
+  ],
+  "tblpregnancyhistory_x": [
+    {"source": "Pregnancy_XID", "target": "id", "type": "int"},
+    {"source": "PregnancyID", "target": "pregnancy_id", "type": "int"},
+    {"source": "DateOfVisit", "target": "date_of_visit", "type": "date"},
+    {"source": "CauseOfVisit", "target": "cause_of_visit", "type": "str"},
+    {"source": "Tokos", "target": "tokos", "type": "str"},
+    {"source": "PregnancyAge", "target": "pregnancy_age", "type": "str"},
+    {"source": "Height", "target": "height", "type": "decimal"},
+    {"source": "WeightBegin", "target": "weight_begin", "type": "decimal"},
+    {"source": "WeightCurrent", "target": "weight_current", "type": "decimal"},
+    {"source": "WeightChange", "target": "weight_change", "type": "decimal"},
+    {"source": "Presentation", "target": "presentation", "type": "str"},
+    {"source": "FetalHeart", "target": "fetal_heart", "type": "str"},
+    {"source": "AmnioticSac", "target": "amniotic_sac", "type": "str"},
+    {"source": "Contractions", "target": "contractions", "type": "str"},
+    {"source": "CervicalDilation", "target": "cervical_dilation", "type": "str"},
+    {"source": "CervicalEffacement", "target": "cervical_effacement", "type": "str"},
+    {"source": "ArterialPressure", "target": "arterial_pressure", "type": "str"},
+    {"source": "Temperature", "target": "temperature", "type": "decimal"},
+    {"source": "SumphysialFundalHeightSFH", "target": "sumphysial_fundal_height_sfh", "type": "decimal"},
+    {"source": "Comments", "target": "comments", "type": "str"},
+    {"source": "Created", "target": "created_on", "type": "datetime"},
+    {"source": "CreatedBy", "target": "created_by", "type": "int", 	"default": 1},
+    {"source": "LastUpdated",	"target":"last_updated_on","type":"datetime"},
+    {"source": "LastUpdatedBy","target":"last_updated_by","type":"int","default":1},
+    {"source": "IsActive","target":"is_active","type":"bool"}
   ]
-
 }
