add gyn_history model in the database and migration

--- a/migration_scripts/column_mapping.json
+++ b/migration_scripts/column_mapping.json
@@ -166,5 +166,35 @@
     {"source": "LastUpdated",	"target":"last_updated_on","type":"datetime"},
     {"source": "LastUpdatedBy","target":"last_updated_by","type":"int","default":1},
     {"source": "IsActive","target":"is_active","type":"bool"}
+  ],
+  "tblgynhistory": [
+    {"source": "GynHistoryID", "target": "id", "type": "int"},
+    {"source": "s_org_extID", "target": "patient_id", "type": "int"},
+    {"source": "DateOfVisit", "target": "date_of_visit", "type": "date"},
+    {"source": "CauseOfVisit", "target": "cause_of_visit", "type": "str"},
+    {"source": "LMP", "target": "ter", "type": "date"},
+    {"source": "CurrentDisease", "target": "current_disease", "type": "str"},
+    {"source": "PastMedicalHistory", "target": "past_medical_history", "type": "str"},
+    {"source": "Temperature", "target": "temperature", "type": "decimal"},
+    {"source": "ArterialPressure", "target": "arterial_pressure", "type": "decimal"},
+    {"source": "HeartRate",	"target":"heart_rate","type":"decimal"},
+    {"source": "View",	"target":"view","type":"str"},
+    {"source": "Nutrition",	"target":"nutrition","type":"str"},
+    {"source": "Height",	"target":"height","type":"decimal"},
+    {"source": "Weight",	"target":"weight","type":"decimal"},
+    {"source": "Breasts",	"target":"breasts","type":"str"},
+    {"source": "LymphNodes",	"target":"lymph_nodes","type":"str"},
+    {"source": "Abdomen",	"target":"abdomen","type":"str"},
+    {"source": "PerineumVulva",	"target":"perineum_vulva","type":"str"},
+    {"source": "VaginaCervixCorpusUteri",	"target":"vagina_cervix_corpus_uteri","type":"str"},
+    {"source": "OvariesParametrium",	"target":"ovaries_parametrium","type":"str"},
+    {"source": "OtherSystems",	"target":"other_systems","type":"str"},
+    {"source": "ProgressOfDisease",	"target":"progress_of_disease","type":"str"},
+    {"source": "Comments",	"target":"comments","type":"str"},
+    {"source": "Created",	"target":"created_on","type":"datetime"},
+    {"source": "CreatedBy",	"target":"created_by","type":"int","default":1},
+    {"source": "LastUpdated",	"target":"last_updated_on","type":"datetime"},
+    {"source": "LastUpdatedBy",	"target":"last_updated_by","type":"int","default":1},
+    {"source": "IsActive",	"target":"is_active","type":"bool"}
   ]
 }
