--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,51 @@
-alembic==1.16.4 ; python_version >= "3.10" and python_version < "4.0"
-annotated-types==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
-anyio==4.10.0 ; python_version >= "3.10" and python_version < "4.0"
-azure-core==1.35.1 ; python_version >= "3.10" and python_version < "4.0"
-azure-identity-broker==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
-azure-identity==1.25.0 ; python_version >= "3.10" and python_version < "4.0"
-azure-storage-blob==12.26.0 ; python_version >= "3.10" and python_version < "4.0"
-blinker==1.9.0 ; python_version >= "3.10" and python_version < "4.0"
-certifi==2025.8.3 ; python_version >= "3.10" and python_version < "4.0"
-cffi==2.0.0 ; platform_python_implementation != "PyPy" and python_version < "4.0" and python_version >= "3.10"
-charset-normalizer==3.4.2 ; python_version >= "3.10" and python_version < "4.0"
-click==8.2.1 ; python_version >= "3.10" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
-cryptography==46.0.0 ; python_version >= "3.10" and python_version < "4.0"
-distro==1.9.0 ; python_version >= "3.10" and python_version < "4.0"
-exceptiongroup==1.3.0 ; python_version == "3.10"
-flask-login==0.6.3 ; python_version >= "3.10" and python_version < "4.0"
-flask-migrate==4.1.0 ; python_version >= "3.10" and python_version < "4.0"
-flask-sqlalchemy==3.1.1 ; python_version >= "3.10" and python_version < "4.0"
-flask-wtf==1.2.2 ; python_version >= "3.10" and python_version < "4.0"
-flask==3.1.1 ; python_version >= "3.10" and python_version < "4.0"
-greenlet==3.2.4 ; python_version < "3.14" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version >= "3.10"
-h11==0.16.0 ; python_version >= "3.10" and python_version < "4.0"
-httpcore==1.0.9 ; python_version >= "3.10" and python_version < "4.0"
-httpx==0.28.1 ; python_version >= "3.10" and python_version < "4.0"
-idna==3.10 ; python_version >= "3.10" and python_version < "4.0"
-isodate==0.7.2 ; python_version >= "3.10" and python_version < "4.0"
-itsdangerous==2.2.0 ; python_version >= "3.10" and python_version < "4.0"
-jinja2==3.1.6 ; python_version >= "3.10" and python_version < "4.0"
-jiter==0.10.0 ; python_version >= "3.10" and python_version < "4.0"
-mako==1.3.10 ; python_version >= "3.10" and python_version < "4.0"
-markupsafe==3.0.2 ; python_version >= "3.10" and python_version < "4.0"
-msal-extensions==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
-msal==1.34.0 ; python_version >= "3.10" and python_version < "4.0"
-msal[broker]==1.34.0 ; python_version >= "3.10" and python_version < "4.0"
-numpy==2.2.6 ; python_version == "3.10"
-numpy==2.3.2 ; python_version >= "3.11" and python_version < "4.0"
-openai==1.99.1 ; python_version >= "3.10" and python_version < "4.0"
-pandas==2.3.1 ; python_version >= "3.10" and python_version < "4.0"
-pycparser==2.22 ; platform_python_implementation != "PyPy" and python_version < "4.0" and implementation_name != "PyPy" and python_version >= "3.10"
-pydantic-core==2.33.2 ; python_version >= "3.10" and python_version < "4.0"
-pydantic==2.11.7 ; python_version >= "3.10" and python_version < "4.0"
-pyjwt[crypto]==2.10.1 ; python_version >= "3.10" and python_version < "4.0"
-pymsalruntime==0.18.1 ; python_version >= "3.10" and (platform_system == "Windows" or platform_system == "Darwin" or platform_system == "Linux") and python_version < "4.0"
-python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "4.0"
-python-dotenv==1.1.1 ; python_version >= "3.10" and python_version < "4.0"
-pytz==2025.2 ; python_version >= "3.10" and python_version < "4.0"
-requests==2.32.4 ; python_version >= "3.10" and python_version < "4.0"
-six==1.17.0 ; python_version >= "3.10" and python_version < "4.0"
-sniffio==1.3.1 ; python_version >= "3.10" and python_version < "4.0"
-sqlalchemy==2.0.42 ; python_version >= "3.10" and python_version < "4.0"
-tomli==2.2.1 ; python_version == "3.10"
-tqdm==4.67.1 ; python_version >= "3.10" and python_version < "4.0"
-typing-extensions==4.14.1 ; python_version >= "3.10" and python_version < "4.0"
-typing-inspection==0.4.1 ; python_version >= "3.10" and python_version < "4.0"
-tzdata==2025.2 ; python_version >= "3.10" and python_version < "4.0"
-unicodedata2==16.0.0 ; python_version >= "3.10" and python_version < "4.0"
-urllib3==2.5.0 ; python_version >= "3.10" and python_version < "4.0"
-werkzeug==3.1.3 ; python_version >= "3.10" and python_version < "4.0"
-wtforms==3.2.1 ; python_version >= "3.10" and python_version < "4.0"
+aiohttp==3.9.5
+aiosignal==1.3.1
+alembic==1.13.1
+annotated-types==0.6.0
+anyio==4.3.0
+async-timeout==4.0.3
+attrs==23.2.0
+bcrypt==4.1.3
+blinker==1.7.0
+certifi==2024.2.2
+charset-normalizer==2.0.12
+click==8.1.7
+colorama==0.4.6
+distro==1.9.0
+dnspython==2.6.1
+email_validator==2.1.1
+exceptiongroup==1.2.1
+Flask==3.0.3
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+frozenlist==1.4.1
+greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.3
+Mako==1.3.3
+MarkupSafe==2.1.5
+multidict==6.0.5
+openai==0.28
+pydantic==2.7.1
+pydantic_core==2.18.2
+requests==2.28.0
+sniffio==1.3.1
+SQLAlchemy==2.0.29
+tqdm==4.66.2
+typing_extensions==4.11.0
+urllib3==1.26.18
+Werkzeug==3.0.2
+WTForms==3.1.2
+yarl==1.9.4
+caldav==1.3.9
+python-dotenv==1.0.1
+pandas==2.2.3
+jsonify==0.5
+gunicorn
