--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ unicodedata2 = "*"
 azure-identity = "^1.25.0"
 azure-storage-blob = "^12.26.0"
 azure-identity-broker = "^1.3.0"
+langchain-openai = "^0.3.35"
+langchain-anthropic = "^0.3.22"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
