--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,57 @@
-# Core Flask packages
-Flask==3.1.1
+aiohttp==3.9.5
+aiosignal==1.3.1
+alembic==1.13.1
+annotated-types==0.6.0
+anyio==4.3.0
+async-timeout==4.0.3
+attrs==23.2.0
+bcrypt==4.1.3
+blinker==1.7.0
+certifi==2024.2.2
+charset-normalizer==2.0.12
+click==8.1.7
+colorama==0.4.6
+distro==1.9.0
+dnspython==2.6.1
+email_validator==2.1.1
+exceptiongroup==1.2.1
+Flask==3.0.3
+Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
+Flask-Migrate==3.1.0
 Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.1.0
-Flask-WTF==1.2.2
-WTForms==3.2.1
-
-# Database
-SQLAlchemy==2.0.42
-alembic==1.16.4
-
-# Azure packages
-azure-identity==1.25.0
-azure-storage-blob==12.26.0
-azure-identity-broker==1.3.0
-msal==1.31.1
-msal-extensions==1.2.0
-
-# OpenAI and LangChain
-openai==2.3.0
-langchain-openai==0.3.35
-langchain-anthropic==0.3.22
-langchain-core==0.3.79
-langsmith==0.4.34
-anthropic==0.69.0
-tiktoken==0.12.0
-
-# Data processing
-pandas==2.3.1
-numpy==2.3.2
-unicodedata2==16.0.0
-
-# Utilities
-python-dotenv==1.1.1
-requests==2.32.4
-python-dateutil==2.9.0.post0
-pytz==2025.2
+Flask-WTF==1.2.1
+frozenlist==1.4.1
+greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.3
+Mako==1.3.3
+MarkupSafe==2.1.5
+multidict==6.0.5
+openai==0.28
+pydantic==2.7.1
+pydantic_core==2.18.2
+requests==2.28.0
+sniffio==1.3.1
+SQLAlchemy==2.0.29
+tqdm==4.66.2
+typing_extensions==4.11.0
+urllib3==1.26.18
+Werkzeug==3.0.2
+WTForms==3.1.2
+yarl==1.9.4
+caldav==1.3.9
+python-dotenv==1.0.1
+pandas==2.2.3
+jsonify==0.5
+gunicorn
+azure-identity
+azure-storage-blob
+azure-identity-broker
+langchain
+langchain-openai
+langchain-anthropic
